Fixed overlap in welcome.jsp. Added bootstrap to login page. Adjusted loginservlet to better support login error. Added bootstrap to addpodcast.jsp. Fixed overlap in episode.jsp.

--- a/WebContent/css/navbar.css
+++ b/WebContent/css/navbar.css
@@ -5,10 +5,57 @@ body {
 .bg-white {
 	background-color: #fff; /*Color of main panel*/
 }
+.bg-green {
+	background-color: #7eae65;
+}
 .feather {
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
+  	width: 16px;
+  	height: 16px;
+  	vertical-align: text-bottom;
+}
+
+/*Login-Page*/
+.center-body {
+	display: -ms-flexbox;
+  	display: -webkit-box;
+  	display: flex;
+  	-ms-flex-align: center;
+	-ms-flex-pack: center;
+	-webkit-box-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
+.form-login {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-login .checkbox {
+  font-weight: 400;
+}
+.form-login .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-login .form-control:focus {
+  z-index: 2;
+}
+.form-login input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-login input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 /*Top navigation bar*/
